compiler/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    INPUT
    OUTPUT

Grammar

Rule 0     S' -> program
Rule 1     program -> CRAFT { vars block functions }
Rule 2     vars -> var vars
Rule 3     vars -> empty
Rule 4     functions -> function functions
Rule 5     functions -> empty
Rule 6     var -> VAR type assignment
Rule 7     type -> INT
Rule 8     type -> FLOAT
Rule 9     type -> CHAR
Rule 10    type -> BOOL
Rule 11    type -> STRING
Rule 12    assignment -> ID = expression , assignment
Rule 13    assignment -> ID = expression
Rule 14    function -> FUNCTION type ID ( ) { vars block }
Rule 15    function -> FUNCTION type ID ( parameters_definition ) { vars block }
Rule 16    function -> FUNCTION VOID ID ( ) { vars block }
Rule 17    function -> FUNCTION VOID ID ( parameters_definition ) { vars block }
Rule 18    parameters -> expression
Rule 19    parameters -> expression , parameters
Rule 20    parameters_definition -> type
Rule 21    parameters_definition -> type , parameters_definition
Rule 22    block -> assignment block
Rule 23    block -> if block
Rule 24    block -> cycle block
Rule 25    block -> return block
Rule 26    block -> BREAK block
Rule 27    block -> CONTINUE block
Rule 28    block -> function_call block
Rule 29    block -> empty
Rule 30    if -> IF ( expression ) { block }
Rule 31    if -> IF ( expression ) { block } else
Rule 32    else -> ELSE if
Rule 33    else -> ELSE { block }
Rule 34    cycle -> WHILE ( expression ) { block }
Rule 35    return -> RETURN
Rule 36    return -> RETURN expression
Rule 37    function_call -> ID ( )
Rule 38    function_call -> ID ( parameters )
Rule 39    expression -> expression + expression
Rule 40    expression -> expression - expression
Rule 41    expression -> expression * expression
Rule 42    expression -> expression / expression
Rule 43    expression -> expression % expression
Rule 44    expression -> expression > expression
Rule 45    expression -> expression < expression
Rule 46    expression -> expression EQ expression
Rule 47    expression -> expression LESS_EQ expression
Rule 48    expression -> expression GREATER_EQ expression
Rule 49    expression -> expression AND expression
Rule 50    expression -> expression OR expression
Rule 51    expression -> - expression
Rule 52    expression -> ( expression )
Rule 53    expression -> NUMBER
Rule 54    expression -> FALSE
Rule 55    expression -> TRUE
Rule 56    expression -> ID
Rule 57    empty -> <empty>

Terminals, with rules where they appear

%                    : 43
(                    : 14 15 16 17 30 31 34 37 38 52
)                    : 14 15 16 17 30 31 34 37 38 52
*                    : 41
+                    : 39
,                    : 12 19 21
-                    : 40 51
/                    : 42
<                    : 45
=                    : 12 13
>                    : 44
AND                  : 49
BOOL                 : 10
BREAK                : 26
CHAR                 : 9
CONTINUE             : 27
CRAFT                : 1
ELSE                 : 32 33
EQ                   : 46
FALSE                : 54
FLOAT                : 8
FUNCTION             : 14 15 16 17
GREATER_EQ           : 48
ID                   : 12 13 14 15 16 17 37 38 56
IF                   : 30 31
INPUT                : 
INT                  : 7
LESS_EQ              : 47
NUMBER               : 53
OR                   : 50
OUTPUT               : 
RETURN               : 35 36
STRING               : 11
TRUE                 : 55
VAR                  : 6
VOID                 : 16 17
WHILE                : 34
error                : 
{                    : 1 14 15 16 17 30 31 33 34
}                    : 1 14 15 16 17 30 31 33 34

Nonterminals, with rules where they appear

assignment           : 6 12 22
block                : 1 14 15 16 17 22 23 24 25 26 27 28 30 31 33 34
cycle                : 24
else                 : 31
empty                : 3 5 29
expression           : 12 13 18 19 30 31 34 36 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 52
function             : 4
function_call        : 28
functions            : 1 4
if                   : 23 32
parameters           : 19 38
parameters_definition : 15 17 21
program              : 0
return               : 25
type                 : 6 14 15 20 21
var                  : 2
vars                 : 1 2 14 15 16 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . CRAFT { vars block functions }

    CRAFT           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> CRAFT . { vars block functions }

    {               shift and go to state 3


state 3

    (1) program -> CRAFT { . vars block functions }
    (2) vars -> . var vars
    (3) vars -> . empty
    (6) var -> . VAR type assignment
    (57) empty -> .

    VAR             shift and go to state 5
    BREAK           reduce using rule 57 (empty -> .)
    CONTINUE        reduce using rule 57 (empty -> .)
    ID              reduce using rule 57 (empty -> .)
    IF              reduce using rule 57 (empty -> .)
    WHILE           reduce using rule 57 (empty -> .)
    RETURN          reduce using rule 57 (empty -> .)
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    vars                           shift and go to state 4
    var                            shift and go to state 7
    empty                          shift and go to state 6

state 4

    (1) program -> CRAFT { vars . block functions }
    (22) block -> . assignment block
    (23) block -> . if block
    (24) block -> . cycle block
    (25) block -> . return block
    (26) block -> . BREAK block
    (27) block -> . CONTINUE block
    (28) block -> . function_call block
    (29) block -> . empty
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression
    (30) if -> . IF ( expression ) { block }
    (31) if -> . IF ( expression ) { block } else
    (34) cycle -> . WHILE ( expression ) { block }
    (35) return -> . RETURN
    (36) return -> . RETURN expression
    (37) function_call -> . ID ( )
    (38) function_call -> . ID ( parameters )
    (57) empty -> .

    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    RETURN          shift and go to state 8
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    return                         shift and go to state 14
    assignment                     shift and go to state 15
    function_call                  shift and go to state 9
    empty                          shift and go to state 13
    if                             shift and go to state 11
    block                          shift and go to state 20
    cycle                          shift and go to state 12

state 5

    (6) var -> VAR . type assignment
    (7) type -> . INT
    (8) type -> . FLOAT
    (9) type -> . CHAR
    (10) type -> . BOOL
    (11) type -> . STRING

    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    CHAR            shift and go to state 24
    BOOL            shift and go to state 25
    STRING          shift and go to state 21

    type                           shift and go to state 26

state 6

    (3) vars -> empty .

    BREAK           reduce using rule 3 (vars -> empty .)
    CONTINUE        reduce using rule 3 (vars -> empty .)
    ID              reduce using rule 3 (vars -> empty .)
    IF              reduce using rule 3 (vars -> empty .)
    WHILE           reduce using rule 3 (vars -> empty .)
    RETURN          reduce using rule 3 (vars -> empty .)
    FUNCTION        reduce using rule 3 (vars -> empty .)
    }               reduce using rule 3 (vars -> empty .)


state 7

    (2) vars -> var . vars
    (2) vars -> . var vars
    (3) vars -> . empty
    (6) var -> . VAR type assignment
    (57) empty -> .

    VAR             shift and go to state 5
    BREAK           reduce using rule 57 (empty -> .)
    CONTINUE        reduce using rule 57 (empty -> .)
    ID              reduce using rule 57 (empty -> .)
    IF              reduce using rule 57 (empty -> .)
    WHILE           reduce using rule 57 (empty -> .)
    RETURN          reduce using rule 57 (empty -> .)
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    var                            shift and go to state 7
    empty                          shift and go to state 6
    vars                           shift and go to state 27

state 8

    (35) return -> RETURN .
    (36) return -> RETURN . expression
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression % expression
    (44) expression -> . expression > expression
    (45) expression -> . expression < expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression LESS_EQ expression
    (48) expression -> . expression GREATER_EQ expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . - expression
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . FALSE
    (55) expression -> . TRUE
    (56) expression -> . ID

  ! shift/reduce conflict for ID resolved as shift
    BREAK           reduce using rule 35 (return -> RETURN .)
    CONTINUE        reduce using rule 35 (return -> RETURN .)
    IF              reduce using rule 35 (return -> RETURN .)
    WHILE           reduce using rule 35 (return -> RETURN .)
    RETURN          reduce using rule 35 (return -> RETURN .)
    FUNCTION        reduce using rule 35 (return -> RETURN .)
    }               reduce using rule 35 (return -> RETURN .)
    -               shift and go to state 28
    (               shift and go to state 31
    NUMBER          shift and go to state 29
    FALSE           shift and go to state 30
    TRUE            shift and go to state 34
    ID              shift and go to state 32

  ! ID              [ reduce using rule 35 (return -> RETURN .) ]

    expression                     shift and go to state 33

state 9

    (28) block -> function_call . block
    (22) block -> . assignment block
    (23) block -> . if block
    (24) block -> . cycle block
    (25) block -> . return block
    (26) block -> . BREAK block
    (27) block -> . CONTINUE block
    (28) block -> . function_call block
    (29) block -> . empty
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression
    (30) if -> . IF ( expression ) { block }
    (31) if -> . IF ( expression ) { block } else
    (34) cycle -> . WHILE ( expression ) { block }
    (35) return -> . RETURN
    (36) return -> . RETURN expression
    (37) function_call -> . ID ( )
    (38) function_call -> . ID ( parameters )
    (57) empty -> .

    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    RETURN          shift and go to state 8
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    return                         shift and go to state 14
    assignment                     shift and go to state 15
    function_call                  shift and go to state 9
    empty                          shift and go to state 13
    if                             shift and go to state 11
    block                          shift and go to state 35
    cycle                          shift and go to state 12

state 10

    (34) cycle -> WHILE . ( expression ) { block }

    (               shift and go to state 36


state 11

    (23) block -> if . block
    (22) block -> . assignment block
    (23) block -> . if block
    (24) block -> . cycle block
    (25) block -> . return block
    (26) block -> . BREAK block
    (27) block -> . CONTINUE block
    (28) block -> . function_call block
    (29) block -> . empty
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression
    (30) if -> . IF ( expression ) { block }
    (31) if -> . IF ( expression ) { block } else
    (34) cycle -> . WHILE ( expression ) { block }
    (35) return -> . RETURN
    (36) return -> . RETURN expression
    (37) function_call -> . ID ( )
    (38) function_call -> . ID ( parameters )
    (57) empty -> .

    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    RETURN          shift and go to state 8
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    return                         shift and go to state 14
    assignment                     shift and go to state 15
    function_call                  shift and go to state 9
    empty                          shift and go to state 13
    if                             shift and go to state 11
    block                          shift and go to state 37
    cycle                          shift and go to state 12

state 12

    (24) block -> cycle . block
    (22) block -> . assignment block
    (23) block -> . if block
    (24) block -> . cycle block
    (25) block -> . return block
    (26) block -> . BREAK block
    (27) block -> . CONTINUE block
    (28) block -> . function_call block
    (29) block -> . empty
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression
    (30) if -> . IF ( expression ) { block }
    (31) if -> . IF ( expression ) { block } else
    (34) cycle -> . WHILE ( expression ) { block }
    (35) return -> . RETURN
    (36) return -> . RETURN expression
    (37) function_call -> . ID ( )
    (38) function_call -> . ID ( parameters )
    (57) empty -> .

    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    RETURN          shift and go to state 8
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    return                         shift and go to state 14
    assignment                     shift and go to state 15
    function_call                  shift and go to state 9
    empty                          shift and go to state 13
    cycle                          shift and go to state 12
    block                          shift and go to state 38
    if                             shift and go to state 11

state 13

    (29) block -> empty .

    FUNCTION        reduce using rule 29 (block -> empty .)
    }               reduce using rule 29 (block -> empty .)


state 14

    (25) block -> return . block
    (22) block -> . assignment block
    (23) block -> . if block
    (24) block -> . cycle block
    (25) block -> . return block
    (26) block -> . BREAK block
    (27) block -> . CONTINUE block
    (28) block -> . function_call block
    (29) block -> . empty
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression
    (30) if -> . IF ( expression ) { block }
    (31) if -> . IF ( expression ) { block } else
    (34) cycle -> . WHILE ( expression ) { block }
    (35) return -> . RETURN
    (36) return -> . RETURN expression
    (37) function_call -> . ID ( )
    (38) function_call -> . ID ( parameters )
    (57) empty -> .

    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    RETURN          shift and go to state 8
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    return                         shift and go to state 14
    assignment                     shift and go to state 15
    function_call                  shift and go to state 9
    empty                          shift and go to state 13
    if                             shift and go to state 11
    block                          shift and go to state 39
    cycle                          shift and go to state 12

state 15

    (22) block -> assignment . block
    (22) block -> . assignment block
    (23) block -> . if block
    (24) block -> . cycle block
    (25) block -> . return block
    (26) block -> . BREAK block
    (27) block -> . CONTINUE block
    (28) block -> . function_call block
    (29) block -> . empty
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression
    (30) if -> . IF ( expression ) { block }
    (31) if -> . IF ( expression ) { block } else
    (34) cycle -> . WHILE ( expression ) { block }
    (35) return -> . RETURN
    (36) return -> . RETURN expression
    (37) function_call -> . ID ( )
    (38) function_call -> . ID ( parameters )
    (57) empty -> .

    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    RETURN          shift and go to state 8
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    return                         shift and go to state 14
    assignment                     shift and go to state 15
    function_call                  shift and go to state 9
    empty                          shift and go to state 13
    if                             shift and go to state 11
    block                          shift and go to state 40
    cycle                          shift and go to state 12

state 16

    (12) assignment -> ID . = expression , assignment
    (13) assignment -> ID . = expression
    (37) function_call -> ID . ( )
    (38) function_call -> ID . ( parameters )

    =               shift and go to state 42
    (               shift and go to state 41


state 17

    (30) if -> IF . ( expression ) { block }
    (31) if -> IF . ( expression ) { block } else

    (               shift and go to state 43


state 18

    (26) block -> BREAK . block
    (22) block -> . assignment block
    (23) block -> . if block
    (24) block -> . cycle block
    (25) block -> . return block
    (26) block -> . BREAK block
    (27) block -> . CONTINUE block
    (28) block -> . function_call block
    (29) block -> . empty
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression
    (30) if -> . IF ( expression ) { block }
    (31) if -> . IF ( expression ) { block } else
    (34) cycle -> . WHILE ( expression ) { block }
    (35) return -> . RETURN
    (36) return -> . RETURN expression
    (37) function_call -> . ID ( )
    (38) function_call -> . ID ( parameters )
    (57) empty -> .

    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    RETURN          shift and go to state 8
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    return                         shift and go to state 14
    assignment                     shift and go to state 15
    function_call                  shift and go to state 9
    empty                          shift and go to state 13
    if                             shift and go to state 11
    block                          shift and go to state 44
    cycle                          shift and go to state 12

state 19

    (27) block -> CONTINUE . block
    (22) block -> . assignment block
    (23) block -> . if block
    (24) block -> . cycle block
    (25) block -> . return block
    (26) block -> . BREAK block
    (27) block -> . CONTINUE block
    (28) block -> . function_call block
    (29) block -> . empty
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression
    (30) if -> . IF ( expression ) { block }
    (31) if -> . IF ( expression ) { block } else
    (34) cycle -> . WHILE ( expression ) { block }
    (35) return -> . RETURN
    (36) return -> . RETURN expression
    (37) function_call -> . ID ( )
    (38) function_call -> . ID ( parameters )
    (57) empty -> .

    BREAK           shift and go to state 18
    CONTINUE        shift and go to state 19
    ID              shift and go to state 16
    IF              shift and go to state 17
    WHILE           shift and go to state 10
    RETURN          shift and go to state 8
    FUNCTION        reduce using rule 57 (empty -> .)
    }               reduce using rule 57 (empty -> .)

    return                         shift and go to state 14
    assignment                     shift and go to state 15
    function_call                  shift and go to state 9
    empty                          shift and go to state 13
    if                             shift and go to state 11
    block                          shift and go to state 45
    cycle                          shift and go to state 12

state 20

    (1) program -> CRAFT { vars block . functions }
    (4) functions -> . function functions
    (5) functions -> . empty
    (14) function -> . FUNCTION type ID ( ) { vars block }
    (15) function -> . FUNCTION type ID ( parameters_definition ) { vars block }
    (16) function -> . FUNCTION VOID ID ( ) { vars block }
    (17) function -> . FUNCTION VOID ID ( parameters_definition ) { vars block }
    (57) empty -> .

    FUNCTION        shift and go to state 47
    }               reduce using rule 57 (empty -> .)

    function                       shift and go to state 46
    functions                      shift and go to state 48
    empty                          shift and go to state 49

state 21

    (11) type -> STRING .

    ID              reduce using rule 11 (type -> STRING .)
    ,               reduce using rule 11 (type -> STRING .)
    )               reduce using rule 11 (type -> STRING .)


state 22

    (7) type -> INT .

    ID              reduce using rule 7 (type -> INT .)
    ,               reduce using rule 7 (type -> INT .)
    )               reduce using rule 7 (type -> INT .)


state 23

    (8) type -> FLOAT .

    ID              reduce using rule 8 (type -> FLOAT .)
    ,               reduce using rule 8 (type -> FLOAT .)
    )               reduce using rule 8 (type -> FLOAT .)


state 24

    (9) type -> CHAR .

    ID              reduce using rule 9 (type -> CHAR .)
    ,               reduce using rule 9 (type -> CHAR .)
    )               reduce using rule 9 (type -> CHAR .)


state 25

    (10) type -> BOOL .

    ID              reduce using rule 10 (type -> BOOL .)
    ,               reduce using rule 10 (type -> BOOL .)
    )               reduce using rule 10 (type -> BOOL .)


state 26

    (6) var -> VAR type . assignment
    (12) assignment -> . ID = expression , assignment
    (13) assignment -> . ID = expression

    ID              shift and go to state 51

    assignment                     shift and go to state 50

state 27

    (2) vars -> var vars .

    BREAK           reduce using rule 2 (vars -> var vars .)
    CONTINUE        reduce using rule 2 (vars -> var vars .)
    ID              reduce using rule 2 (vars -> var vars .)
    IF              reduce using rule 2 (vars -> var vars .)
    WHILE           reduce using rule 2 (vars -> var vars .)
    RETURN          reduce using rule 2 (vars -> var vars .)
    FUNCTION        reduce using rule 2 (vars -> var vars .)
    }               reduce using rule 2 (vars -> var vars .)


state 28

    (51) expression -> - . expression
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression % expression
    (44) expression -> . expression > expression
    (45) expression -> . expression < expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression LESS_EQ expression
    (48) expression -> . expression GREATER_EQ expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . - expression
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . FALSE
    (55) expression -> . TRUE
    (56) expression -> . ID

    -               shift and go to state 28
    (               shift and go to state 31
    NUMBER          shift and go to state 29
    FALSE           shift and go to state 30
    TRUE            shift and go to state 34
    ID              shift and go to state 32

    expression                     shift and go to state 52

state 29

    (53) expression -> NUMBER .

    +               reduce using rule 53 (expression -> NUMBER .)
    -               reduce using rule 53 (expression -> NUMBER .)
    *               reduce using rule 53 (expression -> NUMBER .)
    /               reduce using rule 53 (expression -> NUMBER .)
    %               reduce using rule 53 (expression -> NUMBER .)
    >               reduce using rule 53 (expression -> NUMBER .)
    <               reduce using rule 53 (expression -> NUMBER .)
    EQ              reduce using rule 53 (expression -> NUMBER .)
    LESS_EQ         reduce using rule 53 (expression -> NUMBER .)
    GREATER_EQ      reduce using rule 53 (expression -> NUMBER .)
    AND             reduce using rule 53 (expression -> NUMBER .)
    OR              reduce using rule 53 (expression -> NUMBER .)
    BREAK           reduce using rule 53 (expression -> NUMBER .)
    CONTINUE        reduce using rule 53 (expression -> NUMBER .)
    ID              reduce using rule 53 (expression -> NUMBER .)
    IF              reduce using rule 53 (expression -> NUMBER .)
    WHILE           reduce using rule 53 (expression -> NUMBER .)
    RETURN          reduce using rule 53 (expression -> NUMBER .)
    FUNCTION        reduce using rule 53 (expression -> NUMBER .)
    }               reduce using rule 53 (expression -> NUMBER .)
    )               reduce using rule 53 (expression -> NUMBER .)
    ,               reduce using rule 53 (expression -> NUMBER .)
    VAR             reduce using rule 53 (expression -> NUMBER .)


state 30

    (54) expression -> FALSE .

    +               reduce using rule 54 (expression -> FALSE .)
    -               reduce using rule 54 (expression -> FALSE .)
    *               reduce using rule 54 (expression -> FALSE .)
    /               reduce using rule 54 (expression -> FALSE .)
    %               reduce using rule 54 (expression -> FALSE .)
    >               reduce using rule 54 (expression -> FALSE .)
    <               reduce using rule 54 (expression -> FALSE .)
    EQ              reduce using rule 54 (expression -> FALSE .)
    LESS_EQ         reduce using rule 54 (expression -> FALSE .)
    GREATER_EQ      reduce using rule 54 (expression -> FALSE .)
    AND             reduce using rule 54 (expression -> FALSE .)
    OR              reduce using rule 54 (expression -> FALSE .)
    BREAK           reduce using rule 54 (expression -> FALSE .)
    CONTINUE        reduce using rule 54 (expression -> FALSE .)
    ID              reduce using rule 54 (expression -> FALSE .)
    IF              reduce using rule 54 (expression -> FALSE .)
    WHILE           reduce using rule 54 (expression -> FALSE .)
    RETURN          reduce using rule 54 (expression -> FALSE .)
    FUNCTION        reduce using rule 54 (expression -> FALSE .)
    }               reduce using rule 54 (expression -> FALSE .)
    )               reduce using rule 54 (expression -> FALSE .)
    ,               reduce using rule 54 (expression -> FALSE .)
    VAR             reduce using rule 54 (expression -> FALSE .)


state 31

    (52) expression -> ( . expression )
    (39) expression -> . expression + expression
    (40) expression -> . expression - expression
    (41) expression -> . expression * expression
    (42) expression -> . expression / expression
    (43) expression -> . expression % expression
    (44) expression -> . expression > expression
    (45) expression -> . expression < expression
    (46) expression -> . expression EQ expression
    (47) expression -> . expression LESS_EQ expression
    (48) expression -> . expression GREATER_EQ expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . - expression
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . FALSE
    (55) expression -> . TRUE
    (56) expression -> . ID

    -               shift and go to state 28
    (               shift and go to state 31
    NUMBER          shift and go to state 29
    FALSE           shift and go to state 30
    TRUE            shift and go to state 34
    ID              shift and go to state 32

    expression                     shift and go to state 53

state 32

    (56) expression -> ID .

    +               reduce using rule 56 (expression -> ID .)
    -               reduce using rule 56 (expression -> ID .)
    *               reduce using rule 56 (expression -> ID .)
    /               reduce using rule 56 (expression -> ID .)
    %               reduce using rule 56 (expression -> ID .)
    >               reduce using rule 56 (expression -> ID .)
    <               reduce using rule 56 (expression -> ID .)
    EQ              reduce using rule 56 (expression -> ID .)
    LESS_EQ         reduce using rule 56 (expression -> ID .)
    GREATER_EQ      reduce using rule 56 (expression -> ID .)
    AND             reduce using rule 56 (expression -> ID .)
    OR              reduce using rule 56 (expression -> ID .)
    BREAK           reduce using rule 56 (expression -> ID .)
    CONTINUE        reduce using rule 56 (expression -> ID .)
    ID              reduce using rule 56 (expression -> ID .)
    IF              reduce using rule 56 (expression -> ID .)
    WHILE           reduce using rule 56 (expression -> ID .)
    RETURN          reduce using rule 56 (expression -> ID .)
    FUNCTION        reduce using rule 56 (expression -> ID .)
    }               reduce using rule 56 (expression -> ID .)
    )               reduce using rule 56 (expression -> ID .)
    ,               reduce using rule 56 (expression -> ID .)
    VAR             reduce using rule 56 (expression -> ID .)


state 33

    (36) return -> RETURN expression .
    (39) expression -> expression . + expression
    (40) expression -> expression . - expression
    (41) expression -> expression . * expression
    (42) expression -> expression . / expression
    (43) expression -> expression . % expression
    (44) expression -> expression . > expression
    (45) expression -> expression . < expression
    (46) expression -> expression . EQ expression
    (47) expression -> expression . LESS_EQ expression
    (48) expression -> expression . GREATER_EQ expression
    (49) expression -> expression . AND expression
    (50) expression -> expression . OR expression

    BREAK           reduce using rule 36 (return -> RETURN expression .)
    CONTINUE        reduce using rule 36 (return -> RETURN expression .)
    ID              reduce using rule 36 (return -> RETURN expression .)
    IF              reduce using rule 36 (return -> RETURN expression .)
    WHILE           reduce using rule 36 (return -> RETURN expression .)
    RETURN          reduce using rule 36 (return -> RETURN expression .)
    FUNCTION        reduce using rule 36 (return -> RETURN expression .)
    }               reduce using rule 36 (return -> RETURN expression .)
    +               shift and go to state 57
    -               shift and go to state 59
    *               shift and go to state 58
    /               shift and go to state 60
    %               shift and go to state 63
    >               shift and go to state 65
    <               shift and go to state 64
    EQ              shift and go to state 56
    LESS_EQ         shift and go to state 55
    GREATER_EQ      shift and go to state 62
    AND             shift and go to state 54
    OR              shift and go to state 61


state 34

    (55) expression -> TRUE .
